# inih

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  ini_dump.c  ini_example.c  ini_reader_example.cpp  ini_xmacros.c
src/: INIReader.cpp  ini.c
tests/: CMakeLists.txt  unittest.c
